
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct wined3d_state {scalar_t__* render_states; } ;
struct wined3d_context {unsigned int shader_update_mask; int constant_update_mask; } ;
typedef int DWORD ;


 scalar_t__ WINED3D_FOG_NONE ;
 size_t WINED3D_RS_FOGENABLE ;
 size_t WINED3D_RS_FOGTABLEMODE ;
 int WINED3D_SHADER_CONST_FFP_PROJ ;
 unsigned int WINED3D_SHADER_TYPE_VERTEX ;

__attribute__((used)) static void glsl_vertex_pipe_projection(struct wined3d_context *context,
        const struct wined3d_state *state, DWORD state_id)
{

    if (state->render_states[WINED3D_RS_FOGENABLE]
            && state->render_states[WINED3D_RS_FOGTABLEMODE] != WINED3D_FOG_NONE)
        context->shader_update_mask |= 1u << WINED3D_SHADER_TYPE_VERTEX;
    context->constant_update_mask |= WINED3D_SHADER_CONST_FFP_PROJ;
}
